--- a/roles/app/templates/gunicorn_start.j2
+++ b/roles/app/templates/gunicorn_start.j2
@@ -7,6 +7,10 @@ USER={{ gunicorn_user }}
 GROUP={{ gunicorn_group }}
 NUM_WORKERS={{ gunicorn_num_workers }}
 
+# Environment variables for Flask
+export DB_DIR={{ db_dir }}
+export PERSISTENT_DIR={{ persistent_dir }}
+
 # Set this to 0 for unlimited requests. During development, you might want to
 # set this to 1 to automatically restart the process on each request (i.e. your
 # code will be reloaded on every request).
