--- a/roles/nginx/templates/grading.j2
+++ b/roles/nginx/templates/grading.j2
@@ -86,6 +86,8 @@ server {
             return 503;
         }
 
+        root /var/www/html;
+
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header Host $http_host;
