Integrate static HTML files to support the contest front-end

--- a/roles/nginx/templates/grading.j2
+++ b/roles/nginx/templates/grading.j2
@@ -121,6 +121,7 @@ server {
         text/plain csv;
         text/plain txt;
         text/html html;
+        application/javascript js;
     }
 
     # Error pages
