Added Docs link to /deliverables

--- a/roles/nginx/templates/grading.j2
+++ b/roles/nginx/templates/grading.j2
@@ -103,6 +103,11 @@ server {
         }
     }
 
+    location /deliverables {
+        root {{ persistent_dir }};
+        autoindex on;
+    }
+
     location /rankings {
         root {{ persistent_dir }};
         autoindex on;
